// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should check all issues, even the ones that are not visible 1`] = `
<Button
  disabled={false}
  id="issues-bulk-change"
  onClick={[Function]}
>
  issues.bulk_change_X_issues.250
</Button>
`;

exports[`should check max 500 issues 1`] = `
<Button
  disabled={false}
  id="issues-bulk-change"
  onClick={[Function]}
>
  issues.bulk_change_X_issues.500
</Button>
`;

exports[`should switch to source view if an issue is selected 1`] = `
<div
  className="layout-page issues"
  id="issues-page"
>
  <Suggestions
    suggestions="issues"
  />
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="issues.page"
  />
  <ScreenPositionHelper
    className="layout-page-side-outer"
  >
    <Component />
  </ScreenPositionHelper>
  <div
    className="layout-page-main"
  >
    <div
      className="layout-page-header-panel layout-page-main-header issues-main-header"
    >
      <div
        className="layout-page-header-panel-inner layout-page-main-header-inner"
      >
        <div
          className="layout-page-main-inner"
        >
          <A11ySkipTarget
            anchor="issues_main"
          />
          <div
            className="pull-left"
          >
            <Checkbox
              checked={false}
              className="spacer-right text-middle"
              disabled={false}
              id="issues-selection"
              onCheck={[Function]}
              thirdState={false}
              title="issues.select_all_issues"
            />
            <Button
              disabled={true}
              id="issues-bulk-change"
              onClick={[Function]}
            >
              bulk_change
            </Button>
          </div>
          <PageActions
            canSetHome={false}
            effortTotal={1}
            onReload={[Function]}
            paging={
              Object {
                "pageIndex": 1,
                "pageSize": 100,
                "total": 4,
              }
            }
            selectedIndex={0}
          />
        </div>
      </div>
    </div>
    <div
      className="layout-page-main-inner"
    >
      <DeferredSpinner
        loading={false}
        timeout={100}
      >
        <div>
          <IssuesList
            checked={Array []}
            component={
              Object {
                "breadcrumbs": Array [],
                "key": "foo",
                "name": "bar",
                "organization": "John",
                "qualifier": "Doe",
              }
            }
            issues={
              Array [
                Object {
                  "actions": Array [],
                  "component": "main.js",
                  "componentLongName": "main.js",
                  "componentQualifier": "FIL",
                  "componentUuid": "foo1234",
                  "creationDate": "2017-03-01T09:36:01+0100",
                  "flows": Array [],
                  "fromHotspot": false,
                  "key": "foo",
                  "line": 25,
                  "message": "Reduce the number of conditional operators (4) used in the expression",
                  "organization": "myorg",
                  "project": "myproject",
                  "projectKey": "foo",
                  "projectName": "Foo",
                  "projectOrganization": "org",
                  "rule": "javascript:S1067",
                  "ruleName": "foo",
                  "secondaryLocations": Array [],
                  "severity": "MAJOR",
                  "status": "OPEN",
                  "textRange": Object {
                    "endLine": 26,
                    "endOffset": 15,
                    "startLine": 25,
                    "startOffset": 0,
                  },
                  "transitions": Array [],
                  "type": "BUG",
                },
                Object {
                  "actions": Array [],
                  "component": "main.js",
                  "componentLongName": "main.js",
                  "componentQualifier": "FIL",
                  "componentUuid": "foo1234",
                  "creationDate": "2017-03-01T09:36:01+0100",
                  "flows": Array [],
                  "fromHotspot": false,
                  "key": "bar",
                  "line": 25,
                  "message": "Reduce the number of conditional operators (4) used in the expression",
                  "organization": "myorg",
                  "project": "myproject",
                  "projectKey": "foo",
                  "projectName": "Foo",
                  "projectOrganization": "org",
                  "rule": "javascript:S1067",
                  "ruleName": "foo",
                  "secondaryLocations": Array [],
                  "severity": "MAJOR",
                  "status": "OPEN",
                  "textRange": Object {
                    "endLine": 26,
                    "endOffset": 15,
                    "startLine": 25,
                    "startOffset": 0,
                  },
                  "transitions": Array [],
                  "type": "BUG",
                },
                Object {
                  "actions": Array [],
                  "component": "main.js",
                  "componentLongName": "main.js",
                  "componentQualifier": "FIL",
                  "componentUuid": "foo1234",
                  "creationDate": "2017-03-01T09:36:01+0100",
                  "flows": Array [
                    Array [
                      Object {
                        "component": "main.js",
                        "textRange": Object {
                          "endLine": 2,
                          "endOffset": 2,
                          "startLine": 1,
                          "startOffset": 1,
                        },
                      },
                      Object {
                        "component": "main.js",
                        "textRange": Object {
                          "endLine": 2,
                          "endOffset": 2,
                          "startLine": 1,
                          "startOffset": 1,
                        },
                      },
                      Object {
                        "component": "main.js",
                        "textRange": Object {
                          "endLine": 2,
                          "endOffset": 2,
                          "startLine": 1,
                          "startOffset": 1,
                        },
                      },
                    ],
                    Array [
                      Object {
                        "component": "main.js",
                        "textRange": Object {
                          "endLine": 2,
                          "endOffset": 2,
                          "startLine": 1,
                          "startOffset": 1,
                        },
                      },
                      Object {
                        "component": "main.js",
                        "textRange": Object {
                          "endLine": 2,
                          "endOffset": 2,
                          "startLine": 1,
                          "startOffset": 1,
                        },
                      },
                    ],
                  ],
                  "fromHotspot": false,
                  "key": "third",
                  "line": 25,
                  "message": "Reduce the number of conditional operators (4) used in the expression",
                  "organization": "myorg",
                  "project": "myproject",
                  "projectKey": "foo",
                  "projectName": "Foo",
                  "projectOrganization": "org",
                  "rule": "javascript:S1067",
                  "ruleName": "foo",
                  "secondaryLocations": Array [
                    Object {
                      "component": "main.js",
                      "textRange": Object {
                        "endLine": 2,
                        "endOffset": 2,
                        "startLine": 1,
                        "startOffset": 1,
                      },
                    },
                    Object {
                      "component": "main.js",
                      "textRange": Object {
                        "endLine": 2,
                        "endOffset": 2,
                        "startLine": 1,
                        "startOffset": 1,
                      },
                    },
                  ],
                  "severity": "MAJOR",
                  "status": "OPEN",
                  "textRange": Object {
                    "endLine": 26,
                    "endOffset": 15,
                    "startLine": 25,
                    "startOffset": 0,
                  },
                  "transitions": Array [],
                  "type": "BUG",
                },
                Object {
                  "actions": Array [],
                  "component": "main.js",
                  "componentLongName": "main.js",
                  "componentQualifier": "FIL",
                  "componentUuid": "foo1234",
                  "creationDate": "2017-03-01T09:36:01+0100",
                  "flows": Array [],
                  "fromHotspot": false,
                  "key": "fourth",
                  "line": 25,
                  "message": "Reduce the number of conditional operators (4) used in the expression",
                  "organization": "myorg",
                  "project": "myproject",
                  "projectKey": "foo",
                  "projectName": "Foo",
                  "projectOrganization": "org",
                  "rule": "javascript:S1067",
                  "ruleName": "foo",
                  "secondaryLocations": Array [],
                  "severity": "MAJOR",
                  "status": "OPEN",
                  "textRange": Object {
                    "endLine": 26,
                    "endOffset": 15,
                    "startLine": 25,
                    "startOffset": 0,
                  },
                  "transitions": Array [],
                  "type": "BUG",
                },
              ]
            }
            onFilterChange={[Function]}
            onIssueChange={[Function]}
            onIssueCheck={[Function]}
            onIssueClick={[Function]}
            onPopupToggle={[Function]}
            organization={
              Object {
                "key": "foo",
              }
            }
            selectedIssue={
              Object {
                "actions": Array [],
                "component": "main.js",
                "componentLongName": "main.js",
                "componentQualifier": "FIL",
                "componentUuid": "foo1234",
                "creationDate": "2017-03-01T09:36:01+0100",
                "flows": Array [],
                "fromHotspot": false,
                "key": "foo",
                "line": 25,
                "message": "Reduce the number of conditional operators (4) used in the expression",
                "organization": "myorg",
                "project": "myproject",
                "projectKey": "foo",
                "projectName": "Foo",
                "projectOrganization": "org",
                "rule": "javascript:S1067",
                "ruleName": "foo",
                "secondaryLocations": Array [],
                "severity": "MAJOR",
                "status": "OPEN",
                "textRange": Object {
                  "endLine": 26,
                  "endOffset": 15,
                  "startLine": 25,
                  "startOffset": 0,
                },
                "transitions": Array [],
                "type": "BUG",
              }
            }
          />
          <ListFooter
            count={4}
            loadMore={[Function]}
            loading={false}
            total={4}
          />
        </div>
      </DeferredSpinner>
    </div>
  </div>
</div>
`;

exports[`should switch to source view if an issue is selected 2`] = `
<div
  className="layout-page issues"
  id="issues-page"
>
  <Suggestions
    suggestions="issues"
  />
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
    title="Reduce the number of conditional operators (4) used in the expression"
  />
  <ScreenPositionHelper
    className="layout-page-side-outer"
  >
    <Component />
  </ScreenPositionHelper>
  <div
    className="layout-page-main"
  >
    <A11ySkipTarget
      anchor="issues_main"
    />
    <div
      className="layout-page-main-inner"
    >
      <IssuesSourceViewer
        issues={
          Array [
            Object {
              "actions": Array [],
              "component": "main.js",
              "componentLongName": "main.js",
              "componentQualifier": "FIL",
              "componentUuid": "foo1234",
              "creationDate": "2017-03-01T09:36:01+0100",
              "flows": Array [],
              "fromHotspot": false,
              "key": "foo",
              "line": 25,
              "message": "Reduce the number of conditional operators (4) used in the expression",
              "organization": "myorg",
              "project": "myproject",
              "projectKey": "foo",
              "projectName": "Foo",
              "projectOrganization": "org",
              "rule": "javascript:S1067",
              "ruleName": "foo",
              "secondaryLocations": Array [],
              "severity": "MAJOR",
              "status": "OPEN",
              "textRange": Object {
                "endLine": 26,
                "endOffset": 15,
                "startLine": 25,
                "startOffset": 0,
              },
              "transitions": Array [],
              "type": "BUG",
            },
            Object {
              "actions": Array [],
              "component": "main.js",
              "componentLongName": "main.js",
              "componentQualifier": "FIL",
              "componentUuid": "foo1234",
              "creationDate": "2017-03-01T09:36:01+0100",
              "flows": Array [],
              "fromHotspot": false,
              "key": "bar",
              "line": 25,
              "message": "Reduce the number of conditional operators (4) used in the expression",
              "organization": "myorg",
              "project": "myproject",
              "projectKey": "foo",
              "projectName": "Foo",
              "projectOrganization": "org",
              "rule": "javascript:S1067",
              "ruleName": "foo",
              "secondaryLocations": Array [],
              "severity": "MAJOR",
              "status": "OPEN",
              "textRange": Object {
                "endLine": 26,
                "endOffset": 15,
                "startLine": 25,
                "startOffset": 0,
              },
              "transitions": Array [],
              "type": "BUG",
            },
            Object {
              "actions": Array [],
              "component": "main.js",
              "componentLongName": "main.js",
              "componentQualifier": "FIL",
              "componentUuid": "foo1234",
              "creationDate": "2017-03-01T09:36:01+0100",
              "flows": Array [
                Array [
                  Object {
                    "component": "main.js",
                    "textRange": Object {
                      "endLine": 2,
                      "endOffset": 2,
                      "startLine": 1,
                      "startOffset": 1,
                    },
                  },
                  Object {
                    "component": "main.js",
                    "textRange": Object {
                      "endLine": 2,
                      "endOffset": 2,
                      "startLine": 1,
                      "startOffset": 1,
                    },
                  },
                  Object {
                    "component": "main.js",
                    "textRange": Object {
                      "endLine": 2,
                      "endOffset": 2,
                      "startLine": 1,
                      "startOffset": 1,
                    },
                  },
                ],
                Array [
                  Object {
                    "component": "main.js",
                    "textRange": Object {
                      "endLine": 2,
                      "endOffset": 2,
                      "startLine": 1,
                      "startOffset": 1,
                    },
                  },
                  Object {
                    "component": "main.js",
                    "textRange": Object {
                      "endLine": 2,
                      "endOffset": 2,
                      "startLine": 1,
                      "startOffset": 1,
                    },
                  },
                ],
              ],
              "fromHotspot": false,
              "key": "third",
              "line": 25,
              "message": "Reduce the number of conditional operators (4) used in the expression",
              "organization": "myorg",
              "project": "myproject",
              "projectKey": "foo",
              "projectName": "Foo",
              "projectOrganization": "org",
              "rule": "javascript:S1067",
              "ruleName": "foo",
              "secondaryLocations": Array [
                Object {
                  "component": "main.js",
                  "textRange": Object {
                    "endLine": 2,
                    "endOffset": 2,
                    "startLine": 1,
                    "startOffset": 1,
                  },
                },
                Object {
                  "component": "main.js",
                  "textRange": Object {
                    "endLine": 2,
                    "endOffset": 2,
                    "startLine": 1,
                    "startOffset": 1,
                  },
                },
              ],
              "severity": "MAJOR",
              "status": "OPEN",
              "textRange": Object {
                "endLine": 26,
                "endOffset": 15,
                "startLine": 25,
                "startOffset": 0,
              },
              "transitions": Array [],
              "type": "BUG",
            },
            Object {
              "actions": Array [],
              "component": "main.js",
              "componentLongName": "main.js",
              "componentQualifier": "FIL",
              "componentUuid": "foo1234",
              "creationDate": "2017-03-01T09:36:01+0100",
              "flows": Array [],
              "fromHotspot": false,
              "key": "fourth",
              "line": 25,
              "message": "Reduce the number of conditional operators (4) used in the expression",
              "organization": "myorg",
              "project": "myproject",
              "projectKey": "foo",
              "projectName": "Foo",
              "projectOrganization": "org",
              "rule": "javascript:S1067",
              "ruleName": "foo",
              "secondaryLocations": Array [],
              "severity": "MAJOR",
              "status": "OPEN",
              "textRange": Object {
                "endLine": 26,
                "endOffset": 15,
                "startLine": 25,
                "startOffset": 0,
              },
              "transitions": Array [],
              "type": "BUG",
            },
          ]
        }
        loadIssues={[Function]}
        locationsNavigator={false}
        onIssueChange={[Function]}
        onIssueSelect={[Function]}
        onLocationSelect={[Function]}
        openIssue={
          Object {
            "actions": Array [],
            "component": "main.js",
            "componentLongName": "main.js",
            "componentQualifier": "FIL",
            "componentUuid": "foo1234",
            "creationDate": "2017-03-01T09:36:01+0100",
            "flows": Array [
              Array [
                Object {
                  "component": "main.js",
                  "textRange": Object {
                    "endLine": 2,
                    "endOffset": 2,
                    "startLine": 1,
                    "startOffset": 1,
                  },
                },
                Object {
                  "component": "main.js",
                  "textRange": Object {
                    "endLine": 2,
                    "endOffset": 2,
                    "startLine": 1,
                    "startOffset": 1,
                  },
                },
                Object {
                  "component": "main.js",
                  "textRange": Object {
                    "endLine": 2,
                    "endOffset": 2,
                    "startLine": 1,
                    "startOffset": 1,
                  },
                },
              ],
              Array [
                Object {
                  "component": "main.js",
                  "textRange": Object {
                    "endLine": 2,
                    "endOffset": 2,
                    "startLine": 1,
                    "startOffset": 1,
                  },
                },
                Object {
                  "component": "main.js",
                  "textRange": Object {
                    "endLine": 2,
                    "endOffset": 2,
                    "startLine": 1,
                    "startOffset": 1,
                  },
                },
              ],
            ],
            "fromHotspot": false,
            "key": "third",
            "line": 25,
            "message": "Reduce the number of conditional operators (4) used in the expression",
            "organization": "myorg",
            "project": "myproject",
            "projectKey": "foo",
            "projectName": "Foo",
            "projectOrganization": "org",
            "rule": "javascript:S1067",
            "ruleName": "foo",
            "secondaryLocations": Array [
              Object {
                "component": "main.js",
                "textRange": Object {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
              Object {
                "component": "main.js",
                "textRange": Object {
                  "endLine": 2,
                  "endOffset": 2,
                  "startLine": 1,
                  "startOffset": 1,
                },
              },
            ],
            "severity": "MAJOR",
            "status": "OPEN",
            "textRange": Object {
              "endLine": 26,
              "endOffset": 15,
              "startLine": 25,
              "startOffset": 0,
            },
            "transitions": Array [],
            "type": "BUG",
          }
        }
      />
    </div>
  </div>
</div>
`;
